Change default id to snake-horizontal-right

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="piece" style="position: absolute; right: 0;"></div>
-        <div class="snake" id="snake-horizontal">
+        <div class="snake" id="snake-horizontal-right">
             <div class="piece head">
                 <div class="eye"></div>
                 <div class="eye"></div>
