Change snake's second piece's color because why not

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="eye"></div>
                 <div class="eye"></div>
             </div>
-            <div class="piece" style="background: red;"></div>
+            <div class="piece" style="background: rgb(16, 125, 175);"></div>
         </div>
         <div class="apple"></div>
     </div>
